# LLMpp

./: CMakeLists.txt  LICENSE  README.md  cpuinfo.cpp  memoryarena.h  tensor.h
examples/: CMakeLists.txt  tensor_example.cpp
include/llmpp/: cpuinfo.h
src/: memoryarena.cpp  tensor.cpp
tests/: CMakeLists.txt  test_tensor.cpp
